# ynab-cli

./: Cargo.toml  LICENSE  PRIVACY.md  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
crates/ynab-cli/: Cargo.toml
crates/ynab-cli/src/: cli.rs  main.rs  mcp.rs
crates/ynab-cli/src/commands/: accounts.rs  api.rs  auth.rs  categories.rs  mod.rs  money_movements.rs  months.rs  payee_locations.rs  payees.rs  plans.rs  scheduled.rs  schema.rs  transactions.rs  user.rs
crates/ynab-cli/src/output/: mod.rs
crates/ynab-client/: Cargo.toml
crates/ynab-client/src/: auth.rs  client.rs  config.rs  delta.rs  error.rs  lib.rs  rate_limit.rs
crates/ynab-types/: Cargo.toml
crates/ynab-types/src/: lib.rs
docs/plans/: 2026-03-10-feature-parity-design.md  2026-03-11-readme-design.md
npm/: .gitignore  README.md  install.js  package.json
skills/: budgeting.md  reporting.md  transactions.md
