[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
