[package]
name = "ynab-client"
description = "HTTP client for the YNAB (You Need a Budget) API"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ynab-types = { path = "../ynab-types" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
dirs = "6"
keyring = { version = "3", features = ["apple-native"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
open = "5"
url = "2"
